--- a/src/Components/HeroComponents/MainComponent2.css
+++ b/src/Components/HeroComponents/MainComponent2.css
@@ -26,3 +26,16 @@ h1 {
 .button-container {
   animation: slideInFromRight 0.5s 0.4s ease-in-out forwards;
 }
+
+@media only screen and (max-width: 600px) {
+  .text-container {
+    top: 5% !important;
+    justify-content: center;
+  }
+  h1 {
+    font-size: xx-large;
+  }
+  h4 {
+    font-size: small;
+  }
+}
