--- a/src/Components/HeroComponents/Welcome.css
+++ b/src/Components/HeroComponents/Welcome.css
@@ -71,3 +71,49 @@
   -webkit-user-select: none;
   touch-action: manipulation;
 }
+
+@media only screen and (max-width: 600px) {
+  #welcome {
+    flex-direction: column;
+  }
+  .welcome-text-section {
+    flex-direction: column;
+  }
+  .welcome-lists {
+    flex-direction: column;
+  }
+  .welcome-first-list {
+    flex-direction: column;
+  }
+  .welcome-second-list {
+    flex-direction: column;
+  }
+
+  .welcome-empty-image-section {
+    width: 100%;
+    height: 500px;
+  }
+  .check-text {
+    padding-right: 0px;
+  }
+
+  .welcome-rmc-about-text {
+    margin-bottom: 35px;
+  }
+  .welcome-text {
+    font-size: 40px;
+    color: #42c6ec;
+    margin-bottom: 0px;
+  }
+  .rmc-text {
+    margin-top: 0;
+    font-size: 35px;
+  }
+  .welcome-list {
+    margin-left: 0px;
+    list-style: none;
+  }
+  .welcome-text-section {
+    width: 100%;
+  }
+}
