removed extra margin in about page

--- a/src/Components/AboutPage/AboutSection.css
+++ b/src/Components/AboutPage/AboutSection.css
@@ -77,13 +77,11 @@
 
 .twopics{
     margin-top: 40px;
+    margin: 10px;
     
 
 }
 
 .pictwo{
     border-radius: 10px;
-}
-.onepice{
-    margin-right: 80px;
 }
