--- a/src/Components/LanguageComponents/CoursesMain.css
+++ b/src/Components/LanguageComponents/CoursesMain.css
@@ -13,6 +13,10 @@
     border-bottom: 1px solid black;
     
 }
+
+.langcoursecontainer{
+    margin: 0px;
+}
 .title{
     font-size: 48px;
     font-weight: 600;
